Ajout de l'objet-type collectable

--- a/GentleGhostJam/Assembly-CSharp.csproj
+++ b/GentleGhostJam/Assembly-CSharp.csproj
@@ -45,6 +45,7 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>     <Compile Include="Assets\Scripts\FollowPlayer.cs" />
+     <Compile Include="Assets\Scripts\Interaction\CollectableObject.cs" />
      <Compile Include="Assets\Scripts\Interaction\Interaction.cs" />
      <Compile Include="Assets\Scripts\Inventaire\Case.cs" />
      <Compile Include="Assets\Scripts\Inventaire\Inventaire.cs" />
